# mkl_perf_comparison

./: CMakeLists.txt  README.md
source/: bench_mkl_fft.cpp  helpers.cpp  helpers.hpp  main.cpp  scalar.cpp  sum_avx2.cpp  sum_avx2.hpp
